feature: Add filters parameter to quay/stop estimatedCalls